--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ h2 {
   font-size: 16px;
   color: red;
   text-decoration: none;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -21,5 +22,4 @@ p {
   font-size: 12px;
   margin: 0 15px;
 }
-
 /*# sourceMappingURL=style.css.map */
